--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.74.3",
     "react-native-calendars": "^1.1305.0",
     "react-native-element-dropdown": "^2.12.1",
